# rdflib-reasoning

./: .cursorignore  .env.example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  .script-helpers.sh  AGENTS.md  CITATION.cff  LICENSE  Makefile  RDFLib Reasoning.code-workspace  README.md  conftest.py  data.json  environment.yml  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  release-drafter.yml
.github/workflows/: build.yml  release.yml
docs-src/: conf.py  getting-started.md  index.md
docs-src/api/: index.md
docs-src/development/: architecture.md  roadmap.md
docs-src/package-guides/: axioms.md  engine.md  index.md  middleware.md
docs/dev/: AGENTS.md  approach.md  architecture.md  prospective-use-cases.md  roadmap.md
docs/example-chats/: AGENTS.md  README.md  (+9 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_00d24b04c976280d___init___py.html  z_00d24b04c976280d_owl2_rl_contradictions_py.html  z_00d24b04c976280d_rdf_axioms_py.html  z_00d24b04c976280d_rdfs_axioms_py.html  z_00d24b04c976280d_rdfs_py.html  z_1c2248b53860ce78___init___py.html  z_1c2248b53860ce78__message_heuristics_py.html  z_1c2248b53860ce78_continuation_guard_middleware_py.html  z_1c2248b53860ce78_continuation_state_py.html  z_1c2248b53860ce78_dataset_middleware_py.html  z_1c2248b53860ce78_dataset_model_py.html  z_1c2248b53860ce78_dataset_state_py.html  z_1c2248b53860ce78_ministral_middleware_py.html  z_1c2248b53860ce78_rdf_vocabulary_middleware_py.html  z_1c2248b53860ce78_shared_services_py.html  z_1c2248b53860ce78_tracing_notebook_py.html  z_1c2248b53860ce78_tracing_py.html  z_1c2248b53860ce78_vocabulary_configuration_py.html  z_1fb2835445b6b88d___init___py.html  z_1fb2835445b6b88d_axiomatize_py.html  z_1fb2835445b6b88d_class_axiom_py.html  z_1fb2835445b6b88d_common_py.html  z_1fb2835445b6b88d_datatype_py.html  z_1fb2835445b6b88d_n3_terms_py.html  z_1fb2835445b6b88d_structural_element_py.html  z_31ffdfa8d9a74441___init___py.html  z_31ffdfa8d9a74441_rdfs_py.html  z_4c0dc05b9b84f57b___init___py.html  z_4c0dc05b9b84f57b_api_py.html  z_4c0dc05b9b84f57b_batch_dispatcher_py.html  z_4c0dc05b9b84f57b_builtins_py.html  z_4c0dc05b9b84f57b_derivation_py.html  z_4c0dc05b9b84f57b_proof_notebook_py.html  z_4c0dc05b9b84f57b_proof_py.html  z_4c0dc05b9b84f57b_proof_rendering_py.html  z_4c0dc05b9b84f57b_rete_store_py.html  (+40 more)
notebooks/: AGENTS.md  README.md  baseline-proof.ipynb  demo-baseline-ontology-extraction.ipynb  demo-contradiction-rules.ipynb  demo-dataset-middleware.ipynb  demo-proof-reconstructor.ipynb  demo-rdfs-inference.ipynb  demo-rdfs-retraction.ipynb  demo-vocabulary-middleware-ext.ipynb  demo-vocabulary-middleware.ipynb  demo_utils.py
rdflib-reasoning-axioms/: AGENTS.md  README.md  pyproject.toml
rdflib-reasoning-axioms/src/rdflib_reasoning/axiom/: __init__.py  axiomatize.py  class_axiom.py  common.py  datatype.py  n3_terms.py  structural_element.py
rdflib-reasoning-axioms/src/rdflibr/axiom/: common.py  structural_element.py
rdflib-reasoning-axioms/tests/: test_axiom.py  test_axiomatize.py  test_class_axiom.py  test_datatype.py  test_n3_terms.py  test_structural_element.py
rdflib-reasoning-engine/: AGENTS.md  README.md  pyproject.toml
rdflib-reasoning-engine/src/rdflib_reasoning/engine/: __init__.py  api.py  batch_dispatcher.py  builtins.py  derivation.py  errors.py  proof.py  proof_notebook.py  proof_rendering.py  rete_store.py  rules.py
rdflib-reasoning-engine/src/rdflib_reasoning/engine/rete/: __init__.py  callbacks.py  compiler.py  consequents.py  facts.py  network.py  tms.py
rdflib-reasoning-engine/src/rdflib_reasoning/engine/rulesets/: __init__.py  owl2_rl_contradictions.py  rdf_axioms.py  rdfs.py  rdfs_axioms.py
rdflib-reasoning-engine/src/rdflibr/engine/: __init__.py  api.py  batch_dispatcher.py  derivation.py  proof.py  rete_engine.py  rete_store.py  rules.py  store_wrapper.py
rdflib-reasoning-engine/src/rdflibr/engine/rete/: __init__.py  agenda.py  callbacks.py  compiler.py  consequents.py  facts.py  network.py  tms.py
rdflib-reasoning-engine/src/rdflibr/engine/rulesets/: __init__.py  rdfs.py
rdflib-reasoning-engine/tests/: conftest.py  test_batch_dispatcher.py  test_compiler.py  test_contradiction_channel.py  test_engine.py  test_network_builder.py  test_package_layout.py  test_proof.py  test_proof_rendering.py  test_rete_store.py  test_rules.py  test_ruleset_rdfs.py  test_store_wrapper.py  test_term_type_constraints.py  test_tms.py
rdflib-reasoning-middleware/: AGENTS.md  README.md  pyproject.toml
rdflib-reasoning-middleware/src/rdflib_reasoning/middleware/: __init__.py  _message_heuristics.py  common.py  continuation_guard_middleware.py  continuation_state.py  dataset_middleware.py  dataset_model.py  dataset_state.py  ministral_middleware.py  rdf_vocabulary_middleware.py  shared_services.py  tracing.py  tracing_notebook.py  vocabulary_configuration.py
rdflib-reasoning-middleware/src/rdflib_reasoning/middleware/namespaces/: _bundled.py  common.py  spec_cache.py  spec_index.py  spec_normalizer.py  spec_whitelist.py
rdflib-reasoning-middleware/src/rdflib_reasoning/middleware/vocabulary/: search_index.py  search_model.py
rdflib-reasoning-middleware/src/rdflibr/middleware/: __init__.py  dataset_middleware.py  dataset_model.py  dataset_state.py  dataset_tools.py  ministral_middleware.py  prefix_tools.py  rdf_vocabulary_middleware.py  tracing.py  tracing_notebook.py
rdflib-reasoning-middleware/src/rdflibr/middleware/namespaces/: spec_cache.py  spec_index.py  spec_normalizer.py
rdflib-reasoning-middleware/tests/: _agent_test_utils.py  test_continuation_guard_middleware.py  test_dataset_middleware.py  test_dataset_model.py  test_dataset_tools.py  test_guard_graph_integration.py  test_message_heuristics.py  test_ministral_middleware.py  test_rdf_vocabulary_middleware.py  test_tracing.py  test_vocabulary_configuration.py
rdflib-reasoning-middleware/tests/namespaces/: test_bundled.py  test_spec_index.py  test_spec_whitelist.py
rdflib-reasoning-middleware/tests/vocabulary/: test_search_index.py
(+59 files in other folders)
