[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning"
version = "0.1.0"
description = "Axiomatization of graphs for RDFLib"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "rdflib",
  "rdflib-reasoning-axioms",
  "rdflib-reasoning-engine",
  "rdflib-reasoning-middleware",
]

[project.optional-dependencies]
dev = ["beautifulsoup4", "mypy", "pytest", "ruff"]
research = ["ipykernel", "jupyterlab"]

[tool.uv.sources]
rdflib-reasoning-axioms = { workspace = true }
rdflib-reasoning-engine = { workspace = true }
rdflib-reasoning-middleware = { workspace = true }

[tool.uv.workspace]
members = [
  "rdflib-reasoning-axioms",
  "rdflib-reasoning-engine",
  "rdflib-reasoning-middleware",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflib_reasoning"]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-select = ["B", "I"]

[tool.pytest.ini_options]
testpaths = [
  "rdflib-reasoning-axioms/tests",
  "rdflib-reasoning-engine/tests",
  "rdflib-reasoning-middleware/tests",
]
addopts = "-v --import-mode=importlib"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "src",
  "rdflib-reasoning-axioms/src",
  "rdflib-reasoning-engine/src",
  "rdflib-reasoning-middleware/src",
]
files = [
  "src",
  "rdflib-reasoning-axioms/src",
  "rdflib-reasoning-engine/src",
  "rdflib-reasoning-middleware/src",
]

[[tool.mypy.overrides]]
module = ["rdflibr.middleware.*"]
disable_error_code = ["import-not-found"]
