[build-system]
requires = ["hatch-vcs", "hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning"
dynamic = ["version"]
license = { file = "LICENSE" }
description = "Axiomatization of graphs for RDFLib"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "rdflib",
  "rdflib-reasoning-axioms",
  "rdflib-reasoning-engine",
  "rdflib-reasoning-middleware",
]

[project.optional-dependencies]
dev = [
  "beautifulsoup4",
  "build",
  "mypy",
  "myst-parser",
  "pip-audit",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "rdflib-reasoning-axioms[dev]",
  "rdflib-reasoning-engine[dev]",
  "rdflib-reasoning-middleware[dev]",
  "ruff",
  "sphinx",
  "sphinx-autoapi",
  "twine",
]
research = ["ipykernel", "jupyterlab"]

[tool.uv.sources]
rdflib-reasoning-axioms = { workspace = true }
rdflib-reasoning-engine = { workspace = true }
rdflib-reasoning-middleware = { workspace = true }

[tool.uv.workspace]
members = [
  "rdflib-reasoning-axioms",
  "rdflib-reasoning-engine",
  "rdflib-reasoning-middleware",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflib_reasoning"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
extend-select = ["B", "I"]

[tool.pytest.ini_options]
testpaths = [
  "rdflib-reasoning-axioms/tests",
  "rdflib-reasoning-engine/tests",
  "rdflib-reasoning-middleware/tests",
]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=src",
  "--cov=rdflib-reasoning-axioms/src",
  "--cov=rdflib-reasoning-engine/src",
  "--cov=rdflib-reasoning-middleware/src",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-report=html",
  # We need the causes of exceptions, too
  # "--tb=native",
]

# Coverage is always run with pytest for Development Agent review and CI (e.g. xml for Codecov).

[tool.coverage.run]
relative_files = true
source = [
  "src",
  "rdflib-reasoning-axioms/src",
  "rdflib-reasoning-engine/src",
  "rdflib-reasoning-middleware/src",
]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "src",
  "rdflib-reasoning-axioms/src",
  "rdflib-reasoning-engine/src",
  "rdflib-reasoning-middleware/src",
]
files = [
  "src",
  "rdflib-reasoning-axioms/src",
  "rdflib-reasoning-engine/src",
  "rdflib-reasoning-middleware/src",
]

[[tool.mypy.overrides]]
module = ["rdflibr.middleware.*"]
disable_error_code = ["import-not-found"]
