[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning-axioms"
version = "0.1.0"
description = "Axiomatization of RDF graphs for RDFLib"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "rdflib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflibr"]
