[build-system]
requires = ["hatch-vcs", "hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning-axioms"
dynamic = ["version"]
license = { file = "../LICENSE" }
description = "Axiomatization of RDF graphs for RDFLib"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic", "rdflib"]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflibr"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
