[build-system]
requires = ["hatch-vcs", "hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning-axioms"
dynamic = ["version"]
license = { file = "../LICENSE" }
description = "Axiomatization of RDF graphs for RDFLib"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic>=2.12", "rdflib", "regex", "rfc3987-syntax"]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "mypy", "ruff", "types-regex"]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflib_reasoning"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
search_parent_directories = true
