[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning-engine"
version = "0.1.0"
description = "RETE-based RDFS and OWL 2 RL entailment for RDFLib"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["rdflib"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflibr"]
