[build-system]
requires = ["hatch-vcs", "hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning-engine"
dynamic = ["version"]
license = "MIT"
description = "RETE-based RDFS and OWL 2 RL entailment for RDFLib"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic", "rdflib", "rdflib-reasoning-axioms"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflibr"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
