[build-system]
requires = ["hatch-vcs", "hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "rdflib-reasoning-middleware"
dynamic = ["version"]
license = { file = "../LICENSE" }
description = "LangChain Custom Middleware for Semantic Web Reasoning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents",
    "langchain",
    "langgraph",
    "more-itertools",
    "pydantic>=2.12",
    "rdflib",
    "readerwriterlock",
    "regex",
    "rfc3987-syntax",
]

[project.optional-dependencies]
dev = ["pytest", "langchain-openai", "types-regex"]
notebook = ["ipython", "mistune", "networkx", "numpy", "scipy"]

[tool.hatch.build.targets.wheel]
packages = ["src/rdflibr"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]
files = ["src"]

[[tool.mypy.overrides]]
module = ["langchain.*"]
ignore_missing_imports = true

[tool.pyright]
reportMissingImports = false
